--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,8 +2,8 @@
   "name": "Mood Journal",
   "short_name": "Journal",
   "description": "Track your moods and keep a journal.",
-  "start_url": "/moodjournal/",
-  "scope": "/moodjournal/",
+  "start_url": "./",
+  "scope": "./",
   "display": "standalone",
   "background_color": "#1e1e1e",
   "orientation": "portrait-primary",
