--- a/manifest.json
+++ b/manifest.json
@@ -2,14 +2,14 @@
   "name": "Mood Journal",
   "short_name": "Journal",
   "description": "Track your moods and keep a journal.",
-  "start_url": "./",
-  "scope": "./",
+  "start_url": "/moodjournal/",
+  "scope": "/moodjournal/",
   "display": "standalone",
   "background_color": "#1e1e1e",
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "assets/icon-Drhcwg3O.png",
+      "src": "/moodjournal/assets/icon-Drhcwg3O.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
